--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preload" href="/main.js" as="script">
+  <link rel="preload" href="/styles.css" as="style">
+  <link rel="dns-prefetch" href="api/geolocation">
 </head>
 
 <body>
