--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -7,10 +7,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="preload" href="/main.js" as="script">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"
+    crossorigin>
+  <link rel="preload" href="/main.js" as="script" crossorigin="anonymous">
   <link rel="preload" href="/styles.css" as="style">
-  <link rel="dns-prefetch" href="api/geolocation">
+
+  <!-- TODO make link dns-prefetch for when prod url  -->
 </head>
 
 <body>
