no more angular material :)

--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preload" href="/main.js" as="script" crossorigin="anonymous">
   <link rel="preload" href="/styles.css" as="style">
-
+  <link rel="preload" href="/assets/icons.svg" as="image" type="image/svg+xml">
   <!-- TODO make link dns-prefetch for when prod url  -->
 </head>
 
