--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="svg" href="assets/sprout.svg">
+  <link rel="preload" href="assets/fonts/roboto/Roboto-Regular.ttf" as="font" type="font/ttf" crossorigin>
 </head>
 
 <body>
